<resources>
    <string name="app_name">Decktagram</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_reset_game">Reset Game</string>
    <string name="action_delete_game">Delete Game</string>
    <string name="action_reset_deck">Reset Deck</string>
    <string name="action_add_cards">Add Cards</string>
    <string name="action_add_game">Add Game</string>
    <string name="action_add_deck">Add Deck</string>
    <string name="action_delete_deck">Delete Deck</string>
    
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Decktagram</string>
    <string name="game_fragment_label">Game</string>
    <string name="game_fragment_title">Game: %s</string>
    <string name="deck_fragment_label">Deck</string>
    <string name="deck_fragment_title">Deck: %s</string>
    <string name="cards_fragment_label">View Cards</string>
    <string name="view_card_fragment_label">Card</string>
    <string name="camera_fragment_label">Take Photo</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="about_fragment_label">About</string>
    
    <!-- New Game Dialog -->
    <string name="game_dialog_name_label">Game name</string>
    <string name="game_dialog_button_cancel">Cancel</string>
    <string name="game_dialog_button_save">Save</string>

    <!-- New Deck Dialog -->
    <string name="deck_dialog_name_label">Deck name</string>
    <string name="deck_dialog_button_cancel">Cancel</string>
    <string name="deck_dialog_button_save">Save</string>
    
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    
    <!-- File storage -->
    <string name="game_folder_name">Game_%s</string>
    <string name="default_folder_name">Images</string>

    <!-- Main display -->
    <string name="home_empty_text">You have not added any games yet.</string>
    <string name="home_add_game_button">Add Game</string>
    
    <!-- Game display -->
    <string name="game_empty_text">You have not added any decks to this game.</string>
    <string name="game_add_deck_button">Add Deck</string>

    <!-- Deck display -->
    <string name="deck_group_all">All Cards</string>
    <string name="deck_group_drawn">Drawn Cards</string>
    <string name="deck_group_remaining">Remaining Cards</string>
    
    <string name="deck_draw_card_button">Draw Card</string>
    <string name="deck_undo_button">Undo</string>
    
    <string name="deck_add_cards_button">Add Cards</string>

    <string name="deck_empty_text">You have not added any cards to this deck yet.</string>


    <!-- Camera Dialog -->
    <string name="camera_capture_button">Take Photo</string>
    <string name="camera_done_button">Done</string>
    <plurals name="camera_cancel_message">
        <item quantity="one">Do you want to save the image you just took?</item>
        <item quantity="other">Do you want to save the images you just took?</item>
    </plurals>
    <string name="camera_cancel_message_button_positive">Yes</string>
    <string name="camera_cancel_message_button_negative">No</string>
    
    <!-- Errors -->
    <string name="error_camera_generic">Something went wrong. Please try again.</string>

    <string name="error_camera_permission">You can\'t add new cards without enabling the camera &amp; storage permissions. Please allow camera permissions from the settings screen and try again.</string>
x
    <string name="error_camera_permission_settings">Settings</string>

    <string name="error_settings">An error occurred while loading your app settings. Please try again.</string>
    <string name="error_button_negative">Cancel</string>
    <string name="error_button_neutral">OK</string>

    <!-- Settings -->
    <string name="setting_image_category">Image Settings</string>
    <string name="setting_image_storage_gallery">Store images in device gallery</string>
    <string name="setting_image_quality">Target image dimensions</string>
    <string name="setting_image_quality_summary">Note - this will match either width or height and will depend on your device capability &amp; aspect ratio. Choose a smaller ratio values for smaller files.</string>
    
    <!-- About -->
    <string name="url_feedback">https://forms.gle/tGRtd2y2P2iSXTZF8</string>
    <string name="version_info">Version %1$s (%2$s)</string>
    
</resources>