<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="dev.katiebarnett.decktagram.presentation.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/action_HomeFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
        
    </fragment>

    <fragment
        android:id="@+id/GameFragment"
        android:name="dev.katiebarnett.decktagram.presentation.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/game_fragment">

        <argument
            android:name="gameId"
            app:argType="long"/>

        <action
            android:id="@+id/action_GameFragment_to_DeckFragment"
            app:destination="@id/DeckFragment" />
        
    </fragment>
    
    <fragment
        android:id="@+id/DeckFragment"
        android:name="dev.katiebarnett.decktagram.presentation.DeckFragment"
        android:label="@string/deck_fragment_label"
        tools:layout="@layout/deck_fragment">

        <argument
            android:name="deckId"
            app:argType="long"
            app:nullable="false"/>

    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="dev.katiebarnett.decktagram.presentation.SettingsFragment"
        android:label="@string/settings_fragment_label"/>

    <fragment
        android:id="@+id/AboutFragment"
        android:name="dev.katiebarnett.decktagram.presentation.AboutFragment"
        android:label="@string/about_fragment_label"/>

    <action android:id="@+id/action_global_AboutFragment"
        app:destination="@id/AboutFragment"/>
    
    <action android:id="@+id/action_global_SettingsFragment"
        app:destination="@id/SettingsFragment"/>
    
</navigation>